Code coverage configuration

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "collectCoverageFrom": [
       "src/**/*.js",
       "!src/index.js",
-      "src/serviceWorker.js"
+      "!src/serviceWorker.js"
     ],
     "coverageThreshold": {
       "global": {
