--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "emailjs-mime-parser": "^2.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^11.3.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
