--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettier": "prettier --write 'src/**/*.js' 'src/**/*.css' 'public/**/*.html'"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -52,5 +53,7 @@
       }
     }
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "prettier": "^2.3.0"
+  }
 }
